<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".presentation.category.CategoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/din_regular"
            android:text="@string/kategoriyalar"
            android:textColor="@color/green_text"
            android:textSize="36sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="6dp"
                app:cardBackgroundColor="@color/card_background"
                app:cardCornerRadius="12dp">

                <LinearLayout
                    android:id="@+id/buttonGeography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    android:padding="8dp">

                    <ImageView
                        style="@style/CategoryImageStyle"
                        android:src="@drawable/globe" />

                    <TextView
                        style="@style/CategoryTextStyle"
                        android:text="@string/geografiya"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="6dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/card_background"
                >

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/buttonHistory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    android:padding="8dp">

                    <ImageView
                        style="@style/CategoryImageStyle"
                        android:src="@drawable/history" />

                    <TextView
                        style="@style/CategoryTextStyle"
                        android:text="@string/tarix" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="6dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/card_background">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/buttonProgramming"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    android:padding="8dp">

                    <ImageView
                        style="@style/CategoryImageStyle"
                        android:src="@drawable/ic_programming" />

                    <TextView
                        style="@style/CategoryTextStyle"
                        android:text="@string/programming" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="6dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/card_background">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/buttonPhysics"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:foreground="?android:selectableItemBackgroundBorderless">

                    <ImageView
                        style="@style/CategoryImageStyle"
                        android:src="@drawable/ic_physics" />

                    <TextView
                        style="@style/CategoryTextStyle"
                        android:text="@string/fizika" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="6dp"
                app:cardCornerRadius="12dp"
                app:cardBackgroundColor="@color/card_background">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/buttonMath"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:foreground="?android:selectableItemBackgroundBorderless"
                    android:padding="8dp">

                    <ImageView
                        style="@style/CategoryImageStyle"
                        android:src="@drawable/ic_mathematic" />

                    <TextView
                        style="@style/CategoryTextStyle"
                        android:text="@string/matematika" />

                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </FrameLayout>

</LinearLayout>