<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context=".presentation.main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:paddingHorizontal="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="3/21"
                android:textColor="@color/black"
                android:fontFamily="@font/uzum_extrabold"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="8dp"
            app:cardBackgroundColor="#03A9F4"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <TextView
                android:id="@+id/text_question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textColor="@color/white"
                tools:text="@tools:sample/avatars"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/uzum_bold"/>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/variant1"
                style="@style/variant_container">

                <ImageView
                    android:id="@+id/image_variant_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_unchecked"
                    app:tint="#0F0CA7" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_variant_1"
                    android:text="@string/app_name"
                    style="@style/variant_text" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/variant2"
                style="@style/variant_container">

                <ImageView
                    android:id="@+id/image_variant_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_unchecked"
                    app:tint="#0F0CA7" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_variant_2"
                    android:text="@string/app_name"
                    style="@style/variant_text"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/variant3"
                style="@style/variant_container">

                <ImageView
                    android:id="@+id/image_variant_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_unchecked"
                    app:tint="#0F0CA7" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_variant_3"
                    android:text="@string/app_name"
                    style="@style/variant_text"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            app:cardCornerRadius="6dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:id="@+id/variant4"
                style="@style/variant_container">

                <ImageView
                    android:id="@+id/image_variant_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_unchecked"
                    app:tint="#0F0CA7" />

                <Space
                    android:layout_width="8dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/text_variant_4"
                    android:text="@string/app_name"
                    style="@style/variant_text"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginHorizontal="16dp"
        android:paddingTop="10dp"
        android:paddingHorizontal="3dp">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_finish"
            android:enabled="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish"
            android:layout_gravity="start"
            android:background="@drawable/bg_finish"
            android:textColor="@color/white"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:enabled="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_gravity="end"
            android:textColor="@color/white"
            android:background="@drawable/bg_next" />

    </FrameLayout>

</LinearLayout>